[package]
name = "cyt2b9"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Peripheral access crate for cyt2b9 T2G family"
documentation = "https://docs.rs/cyt2b9"
repository = "https://github.com/Infineon/traveo-t2g-pal/pal_crates/cyt2b9"
license = "BSL-1.0"
readme = "README.md"
keywords = ["t2g", "cyt2b9" ,"svd2rust", "no_std", "embedded", "traveo", "infineon"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
cyt2b9_c = {version = "0.0.1", registry = "atvmrust" ,optional = true}

[features]
default = ["rev_c"]
rev_c = ["cyt2b9_c"]
rt = ["cyt2b9_c?/rt"]
critical-section = ["cyt2b9_c?/critical-section"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi","thumbv7em-none-eabihf"]
features = ["rt","critical-section","rev_c"]
