[package]
name = "cyt2cl"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Peripheral access crate for cyt2cl T2G family"
documentation = "https://docs.rs/cyt2cl"
repository = "https://github.com/Infineon/traveo-t2g-pal/tree/develop/pal_crates/cyt2cl"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["cortex-m", "no_std", "traveo", "infineon"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
cyt2cl_a = {version = "0.0.1",optional = true}

[features]
default = ["rev_a"]
rev_a = ["cyt2cl_a"]
rt = ["cyt2cl_a?/rt"]
critical-section = ["cyt2cl_a?/critical-section"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi","thumbv7em-none-eabihf"]
features = ["rt","critical-section","rev_a"]
