[package]
name = "cyt4bb"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Peripheral access crate for cyt4bb T2G family"
documentation = "https://docs.rs/cyt4bb"
repository = "https://github.com/Infineon/traveo-t2g-pal/pal_crates/cyt4bb"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["t2g", "cyt4bb" ,"svd2rust", "no_std", "embedded", "traveo", "infineon"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
cyt4bb_a = {path = "../cyt4bb_a",optional = true}

cyt4bb_b = {path = "../cyt4bb_b",optional = true}

[features]
default = ["rev_b"]
rev_a = ["cyt4bb_a"]
rev_b = ["cyt4bb_b"]
rt = ["cyt4bb_a?/rt","cyt4bb_b?/rt"]
critical-section = ["cyt4bb_a?/critical-section","cyt4bb_b?/critical-section"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi","thumbv7em-none-eabihf"]
features = ["rt","critical-section","rev_a","rev_b"]
