[package]
name = "cyt4dn"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Peripheral access crate for cyt4dn T2G family"
documentation = "https://docs.rs/cyt4dn"
repository = "https://github.com/Infineon/traveo-t2g-pal/pal_crates/cyt4dn"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["t2g", "cyt4dn" ,"svd2rust", "no_std", "embedded", "traveo", "infineon"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
cyt4dn_a = {path = "../cyt4dn_a",optional = true}

cyt4dn_b = {path = "../cyt4dn_b",optional = true}

cyt4dn_c = {path = "../cyt4dn_c",optional = true}

[features]
default = ["rev_c"]
rev_a = ["cyt4dn_a"]
rev_b = ["cyt4dn_b"]
rev_c = ["cyt4dn_c"]
rt = ["cyt4dn_a?/rt","cyt4dn_b?/rt","cyt4dn_c?/rt"]
critical-section = ["cyt4dn_a?/critical-section","cyt4dn_b?/critical-section","cyt4dn_c?/critical-section"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi","thumbv7em-none-eabihf"]
features = ["rt","critical-section","rev_a","rev_b","rev_c"]
