[package]
name = "cyt4en"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Peripheral access crate for cyt4en T2G family"
documentation = "https://docs.rs/cyt4en"
repository = "https://github.com/Infineon/traveo-t2g-pal/tree/develop/pal_crates/cyt4en"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["cortex-m", "no_std", "traveo", "infineon"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
cyt4en_a = {version = "0.0.1",optional = true}

[features]
default = ["rev_a"]
rev_a = ["cyt4en_a"]
rt = ["cyt4en_a?/rt"]
critical-section = ["cyt4en_a?/critical-section"]

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi","thumbv7em-none-eabihf"]
features = ["rt","critical-section","rev_a"]
